lib/tests/fixtures/compiler/evaluation/collector_in_type_spec.baseline
Error: collector_in_type_spec.pp:1:24: node 'test': collector expressions cannot be used in type specifications.
  type Invalid = Integer[File <||>]
                         ^~~~~~~~~
